// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sharp-form can mount "independant" sharp-form 1`] = `
<div data-popover-boundary="" class="SharpForm">
	<!---->
	<div id="MOCKED_TABBED_LAYOUT">
		<div id="MOCKED_GRID">
			<div id="MOCKED_FIELDS_LAYOUT">
				<fielddisplay-stub field-key="title" context-fields="[object Object]" context-data="[object Object]" field-layout="[object Object]" read-only="true" error-identifier="title" config-identifier="title" root="" update-data="function () { [native code] }"
				    update-visibility="function () { [native code] }"></fielddisplay-stub>
			</div>
		</div>
	</div>
</div>
`;

exports[`sharp-form can mount sharp-form 1`] = `
<div data-popover-boundary="" class="SharpForm">
	<!---->
	<div id="MOCKED_TABBED_LAYOUT">
		<div id="MOCKED_GRID">
			<div id="MOCKED_FIELDS_LAYOUT">
				<fielddisplay-stub field-key="title" context-fields="[object Object]" context-data="[object Object]" field-layout="[object Object]" read-only="true" error-identifier="title" config-identifier="title" root="" update-data="function () { [native code] }"
				    update-visibility="function () { [native code] }"></fielddisplay-stub>
			</div>
		</div>
	</div>
</div>
`;

exports[`sharp-form can mount sharp-form with alert 1`] = `
<div data-popover-boundary="" class="SharpForm">
	<div role="alert" class="alert alert-danger SharpForm__alert">
		<div class="fw-bold">{{ form.validation_error.title }}</div>
		<div>{{ form.validation_error.description }}</div>
	</div>
	<div id="MOCKED_TABBED_LAYOUT">
		<div id="MOCKED_GRID">
			<div id="MOCKED_FIELDS_LAYOUT">
				<fielddisplay-stub field-key="title" context-fields="[object Object]" context-data="[object Object]" field-layout="[object Object]" read-only="true" error-identifier="title" config-identifier="title" root="" update-data="function () { [native code] }"
				    update-visibility="function () { [native code] }"></fielddisplay-stub>
			</div>
		</div>
	</div>
</div>
`;
